RESOLVED FIXED283098
[Writing Tools] Outlook.app quits unexpectedly with Writing Tools
https://bugs.webkit.org/show_bug.cgi?id=283098
Summary [Writing Tools] Outlook.app quits unexpectedly with Writing Tools
Richard Robinson
Reported 2024-11-13 19:37:59 PST
Attachments
Richard Robinson
Comment 1 2024-11-13 19:49:10 PST
EWS
Comment 2 2024-11-13 21:38:28 PST
Committed 286579@main (48d994887c94): <https://commits.webkit.org/286579@main> Reviewed commits have been landed. Closing PR #36628 and removing active labels.
EWS
Comment 3 2024-12-04 12:52:07 PST
Committed 283286.562@safari-7620-branch (1ea709ad43d7): <https://commits.webkit.org/283286.562@safari-7620-branch> Reviewed commits have been landed. Closing PR #2373 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.